tools/tests/errors/surf_num_03.ki
# Float modulo by a zero divisor must raise.
discard 7.5 % 0.0
